--- a/themes/minimal/layout/layout.ejs
+++ b/themes/minimal/layout/layout.ejs
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title><%= config.title %></title>
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css">
-    <%- css('css/styles') %>
-</head>
-<body>
+<% include _partials/head %>
+    <% include _partials/navigation %>
     <div class="container">
         <%- body %>
     </div>
-</body>
-</html>
+<% include _partials/footer %>
