--- a/themes/minimal/source/css/styles.scss
+++ b/themes/minimal/source/css/styles.scss
@@ -1,6 +1,3 @@
-$primary_color: hexo-theme-config('primary_color');
-$secondary_color: hexo-theme-config('secondary_color');
-
 body {
-    background-color: $secondary_color;
+    background-color: white;
 }
